# build-buddy

./: .gitignore  Getting_Started.md  README.md  roadmap.md
.github/ISSUE_TEMPLATE/: agent_configuration_issue.yaml  bug_report.yaml
docs/: common_errors.md
docs/cloudrun-a2a/: .gitignore  README.md  __main__.py  pyproject.toml  test_agent.py  test_auto_activation.py  watson_orchestrate_agent.py  watson_orchestrate_agent_executor.py  watsonx_client.py
docs/cloudrun-a2a/~/.cache/orchestrate/: credentials.yaml
functions/: gofannon_manifest.json
functions/handlers/: context_handler.py
public/: appConfig.json  index.html  manifest.json
src/: App.js
src/components/layout/: Navbar.js
src/pages/: AboutPage.js  HomePage.js  ModelsPage.js  ProjectDetailsPage.js  ProjectsPage.js
